# magic-greyscale

./: .gitignore  Cargo.toml  build_all.sh  build_master.sh  build_pokemon.sh  build_set.sh
decks/: curated_playables.txt  fetchlands_duals.txt  library_painter.txt  patch_page.txt  power9_iconic.txt  power_staples.txt  timeless_staples.txt
src/: arena.rs  cli.rs  main.rs  pokemon.rs
src/deck/: models.rs  parser.rs
src/imaging/: cache.rs  download.rs  greyscale.rs  mod.rs
src/pdf/: generator.rs  layout.rs  mod.rs
src/scryfall/: api.rs  client.rs  mod.rs  models.rs  response_cache.rs
